Fix style of overflowing note

--- a/app/styles/editor.less
+++ b/app/styles/editor.less
@@ -15,6 +15,7 @@
     font-family: Ubuntu;
     outline: none;
     resize: none;
+    overflow: auto;
 
     font-size: 14px;
     line-height: @line-height;
